@@ -21,8 +21,10 @@
 #if defined(__APPLE__) && defined(__MACH__)
 #include <sys/types.h>
 #include <sys/malloc.h>
-#elseif !defined(__FreeBSD__)
+#else
+#ifdef HAVE_MALLOC_H
 #include <malloc.h>
+#endif
 #endif
 #include <stdio.h>
 #include <stdlib.h>
